@@ -1,0 +1,2 @@
+[pages]
+skip=language;
